[gd_scene load_steps=5 format=3 uid="uid://bvhhofc64x2bj"]

[ext_resource type="Script" uid="uid://d0qi5rnoiouqd" path="res://NodeScenes/OpponentField.gd" id="1_a7lkb"]
[ext_resource type="Script" uid="uid://dedry3jf73ury" path="res://EnemySummonSlot.gd" id="3_hc4ya"]
[ext_resource type="PackedScene" uid="uid://djqvbijfnvdbc" path="res://summon_scene.tscn" id="4_a16uc"]
[ext_resource type="PackedScene" uid="uid://c250y1h55d4o2" path="res://hero.tscn" id="13_x2h7x"]

[node name="OpponentField" type="Node2D"]
script = ExtResource("1_a7lkb")

[node name="EnemySummons" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 518.0
offset_top = 233.0
offset_right = 1398.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 220
metadata/_edit_use_anchors_ = true

[node name="EnemySummon_01" parent="EnemySummons" instance=ExtResource("4_a16uc")]
layout_mode = 2
script = ExtResource("3_hc4ya")
summon_slot_number = 5

[node name="EnemySummon_02" parent="EnemySummons" instance=ExtResource("4_a16uc")]
layout_mode = 2
script = ExtResource("3_hc4ya")
summon_slot_number = 4

[node name="EnemySummon_03" parent="EnemySummons" instance=ExtResource("4_a16uc")]
layout_mode = 2
script = ExtResource("3_hc4ya")
summon_slot_number = 3

[node name="EnemySummon_04" parent="EnemySummons" instance=ExtResource("4_a16uc")]
layout_mode = 2
script = ExtResource("3_hc4ya")
summon_slot_number = 2

[node name="EnemySummon_05" parent="EnemySummons" instance=ExtResource("4_a16uc")]
layout_mode = 2
script = ExtResource("3_hc4ya")
summon_slot_number = 1

[node name="EnemyDeck" type="Node" parent="."]

[node name="EnemyHero" parent="." instance=ExtResource("13_x2h7x")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1473.0
offset_top = 238.0
offset_right = 1513.0
offset_bottom = 278.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="EnemyHand" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 831.0
offset_top = -87.0
offset_right = 871.0
offset_bottom = -47.0
grow_horizontal = 2
theme_override_constants/separation = 210
alignment = 1
